[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Title/Flag.png" type="Texture" id=1]
[ext_resource path="res://Theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Warenhaus-Standard.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Desk/Paper1.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Title/TitleScreen.gd" type="Script" id=5]
[ext_resource path="res://Assets/Desk/Paper2.png" type="Texture" id=6]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 3, 2 )
subdivide_width = 8
subdivide_depth = 8

[sub_resource type="Shader" id=5]
code = "shader_type spatial;

uniform float speed = 2.0;
uniform float frequency_y = 5.0;
uniform float frequency_x = 2.5;
uniform float frequency_z = 2.5;
uniform float amplitude_y = 0.1;
uniform float amplitude_x = 0.05;
uniform float amplitude_z = 0.05;
uniform float inclination = -0.04;

uniform sampler2D tex: hint_albedo;

void fragment(){
	vec4 albedo_tex = texture(tex, UV);
	ALBEDO = vec3(1.0) * albedo_tex.rgb;
}

void vertex(){
	VERTEX.y += sin((UV.x - TIME * speed) * frequency_y) * amplitude_y * UV.x;
	VERTEX.x += cos((UV.y - TIME * speed) * frequency_x) * amplitude_x * 0.1 * UV.x;
	VERTEX.z += sin((UV.x - TIME * speed) * frequency_z) * amplitude_z * UV.x;
	VERTEX.x -= (1.0 - UV.y) * inclination;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 5 )
shader_param/speed = 1.0
shader_param/frequency_y = 5.0
shader_param/frequency_x = 5.0
shader_param/frequency_z = 2.5
shader_param/amplitude_y = 0.5
shader_param/amplitude_x = 0.3
shader_param/amplitude_z = 0.2
shader_param/inclination = 0.0
shader_param/tex = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 64
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -380.0
rect_pivot_offset = Vector2( -639, -195 )
script = ExtResource( 5 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -567.0
margin_top = -180.0
margin_right = -747.0
margin_bottom = -180.0

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 720, 720 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Flag" type="MeshInstance" parent="ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
skeleton = NodePath("../../..")
material/0 = SubResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 2, 6 )
light_energy = 0.5
directional_shadow_mode = 0

[node name="Camera" type="Camera" parent="ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = -13.0
margin_top = 11.0
margin_right = 493.0
margin_bottom = 160.0
theme = ExtResource( 2 )
custom_colors/default_color = Color( 0.694118, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]Morse Morse
Revolution[/center]"
text = "Morse Morse
Revolution"
scroll_active = false

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 848, 342 )
rotation = -3.14159
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )

[node name="InfoText" type="RichTextLabel" parent="."]
visible = false
margin_left = 501.0
margin_top = 23.0
margin_right = 904.0
margin_bottom = 696.0
theme = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "Press/hold any button or key to send morse code.

Type any number between [color=#AA0000]1[/color]and [color=#AA0000]5[/color] to start a new game at that difficulty level (1 is easiest, 5 is hardest).

Type [color=#AA0000]S[/color] or [color=#AA0000]O[/color] to start the [color=#AA0000]Morse Timing Setup[/color].

Type [color=#AA0000]C[/color] to view the [color=#AA0000]Credits[/color].

Type [color=#AA0000]UPGAMERS[/color] to access the Level Select."
text = "Press/hold any button or key to send morse code.

Type any number between 1and 5 to start a new game at that difficulty level (1 is easiest, 5 is hardest).

Type S or O to start the Morse Timing Setup.

Type C to view the Credits.

Type UPGAMERS to access the Level Select."
scroll_active = false

[node name="SettingsText" type="RichTextLabel" parent="."]
margin_left = 502.0
margin_top = 23.0
margin_right = 905.0
margin_bottom = 621.0
theme = ExtResource( 2 )
bbcode_enabled = true
scroll_active = false

[node name="CreditsText" type="RichTextLabel" parent="."]
visible = false
margin_left = 487.0
margin_top = 23.0
margin_right = 924.0
margin_bottom = 708.0
theme = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "Made from Nov 18-26, 2022.

Design: Sean Finch, Skyler Johnson

Writing, Programming, Graphics: Sean Finch

Special Thanks: Cecilia Contreras, Skyler Johnson, Ms Paints Jam Squad, Rick Astley

[url=https://github.com/HauntedBees/1-Button-Jam-2022]Full attribution for third-party assets available on GitHub[/url].

Morse anything to return to the main menu."
text = "Made from Nov 18-26, 2022.

Design: Sean Finch, Skyler Johnson

Writing, Programming, Graphics: Sean Finch

Special Thanks: Cecilia Contreras, Skyler Johnson, Ms Paints Jam Squad, Rick Astley

Full attribution for third-party assets available on GitHub.

Morse anything to return to the main menu."
scroll_active = false

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.294118, 0.945098, 0, 0.458824 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 123, 318 )
scale = Vector2( 0.306931, 0.259625 )
texture = ExtResource( 6 )
offset = Vector2( 345.355, -367.477 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 25.0
margin_top = 171.0
margin_right = 459.0
margin_bottom = 274.0
theme = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "A game by [url=https://hauntedbees.com]Haunted Bees Productions[/url] for the [url=https://itch.io/jam/1-button-jam-2022]2022 1-Button Game Jam[/url]."
text = "A game by Haunted Bees Productions for the 2022 1-Button Game Jam."
scroll_active = false
